src/objects/CventEvents__Log__c.object
<CustomObject>
    <description>Cvent app logging object.</description>
    <fields>
        <fullName>CventEvents__Code__c</fullName>
        <description>Unique programmatic identifier for the event, use for filtering, workflows, etc.</description>
        <inlineHelpText>Unique programmatic identifier for the event, use for filtering, workflows, etc.</inlineHelpText>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Detail__c</fullName>
        <description>Detail such as stack trace, should be in JSON format whenever possible.</description>
        <inlineHelpText>Detail such as stack trace, should be in JSON format whenever possible.</inlineHelpText>
        <label>Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__Level__c</fullName>
        <description>Specifies whether the event is directed to the end user, indicates a business rule violation, or indicates an internal error. Used to determine the amount of detail shown to the end user.</description>
        <inlineHelpText>Specifies whether the event is directed to the end user, indicates a business rule violation, or indicates an internal error. Used to determine the amount of detail shown to the end user.</inlineHelpText>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__LogDate__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Date and time of the event.</description>
        <inlineHelpText>Date and time of the event.</inlineHelpText>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__Message__c</fullName>
        <description>The main text message associated with the event.</description>
        <inlineHelpText>The main text message associated with the event.</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enables hierarchical event logs, where one parent event log has multiple child logs.</description>
        <inlineHelpText>Enables hierarchical event logs, where one parent event log has multiple child logs.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>CventEvents__Log__c</referenceTo>
        <relationshipLabel>Child Logs</relationshipLabel>
        <relationshipName>ChildLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__ResultType__c</fullName>
        <description>When the event indicates successful result of an operation, this indicates the data type of the result.</description>
        <inlineHelpText>When the event indicates successful result of an operation, this indicates the data type of the result.</inlineHelpText>
        <label>Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__ScopeType__c</fullName>
        <description>The type of object that the scope refers to.</description>
        <inlineHelpText>The type of object that the scope refers to.</inlineHelpText>
        <label>Scope Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Scope__c</fullName>
        <description>Use to indicate the area that the event refers to, such as the related field or fields or the JSON path.</description>
        <inlineHelpText>Use to indicate the area that the event refers to, such as the related field or fields or the JSON path.</inlineHelpText>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Severity__c</fullName>
        <description>Indicates whether the event represents an error, warning, or is informational.</description>
        <inlineHelpText>Indicates whether the event represents an error, warning, or is informational.</inlineHelpText>
        <label>Severity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Partial Error</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Rolled Back</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__Source__c</fullName>
        <description>Indicates the class, function, page, or other component where the event originated.</description>
        <inlineHelpText>Indicates the class, function, page, or other component where the event originated.</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Status__c</fullName>
        <description>Indicates how this event has been dealt with.</description>
        <inlineHelpText>Indicates how this event has been dealt with.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cvent Log</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__LogDate__c</columns>
        <columns>CventEvents__Level__c</columns>
        <columns>CventEvents__Severity__c</columns>
        <columns>CventEvents__Message__c</columns>
        <columns>CventEvents__ResultType__c</columns>
        <columns>CventEvents__Status__c</columns>
        <columns>CventEvents__Source__c</columns>
        <columns>CventEvents__Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__Level__c</field>
            <operation>equals</operation>
            <value>User,Business,Internal</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__RecentErrors</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__LogDate__c</columns>
        <columns>CventEvents__Level__c</columns>
        <columns>CventEvents__Severity__c</columns>
        <columns>CventEvents__Message__c</columns>
        <columns>CventEvents__ResultType__c</columns>
        <columns>CventEvents__Status__c</columns>
        <columns>CventEvents__Source__c</columns>
        <columns>CventEvents__Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__Severity__c</field>
            <operation>equals</operation>
            <value>PartialError,Error</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Recent Errors</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__RecentLogs</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__LogDate__c</columns>
        <columns>CventEvents__Level__c</columns>
        <columns>CventEvents__Severity__c</columns>
        <columns>CventEvents__Message__c</columns>
        <columns>CventEvents__ResultType__c</columns>
        <columns>CventEvents__Status__c</columns>
        <columns>CventEvents__Source__c</columns>
        <columns>CventEvents__Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Recent</label>
    </listViews>
    <listViews>
        <fullName>Error_Log</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CventEvents__Detail__c</columns>
        <columns>CventEvents__Level__c</columns>
        <columns>CventEvents__Message__c</columns>
        <columns>CventEvents__ResultType__c</columns>
        <columns>CventEvents__Severity__c</columns>
        <columns>CventEvents__Source__c</columns>
        <columns>CventEvents__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__Severity__c</field>
            <operation>equals</operation>
            <value>Warning,Partial Error,Aborted,Rolled Back,Error</value>
        </filters>
        <label>Error Log</label>
    </listViews>
    <listViews>
        <fullName>Recent_Errors_Attendee_Temp</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__LogDate__c</columns>
        <columns>CventEvents__Detail__c</columns>
        <columns>CventEvents__Severity__c</columns>
        <columns>CventEvents__Message__c</columns>
        <columns>CventEvents__Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__Severity__c</field>
            <operation>equals</operation>
            <value>Partial Error,Error</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CventEvents__Source__c</field>
            <operation>equals</operation>
            <value>CreateAttendeeTempBatchService.upsertAttendeeTempRecords()</value>
        </filters>
        <label>Recent Errors - Attendee Temp</label>
    </listViews>
    <listViews>
        <fullName>Recent_Errors_Attendees</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__LogDate__c</columns>
        <columns>CventEvents__Detail__c</columns>
        <columns>CventEvents__Severity__c</columns>
        <columns>CventEvents__Message__c</columns>
        <columns>CventEvents__Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__Severity__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CventEvents__Source__c</field>
            <operation>equals</operation>
            <value>CreateAttendeeTempsBatch.execute()</value>
        </filters>
        <label>Recent Errors - Attendees</label>
    </listViews>
    <listViews>
        <fullName>Recent_Errors_events</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__LogDate__c</columns>
        <columns>CventEvents__Detail__c</columns>
        <columns>CventEvents__Severity__c</columns>
        <columns>CventEvents__Message__c</columns>
        <columns>CventEvents__Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__Severity__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>CventEvents__Source__c</field>
            <operation>equals</operation>
            <value>CreateEventsBatchService.upsertEvents()</value>
        </filters>
        <label>Recent Errors - events</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>